# prootAPK

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/test/prootapk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/proot/execve/: enter.c
app/src/main/cpp/proot/extension/ashmem_memfd/: ashmem_memfd.c
app/src/main/cpp/proot/tracee/: mem.c
app/src/main/cpp/talloc/lib/replace/system/: network.h
app/src/main/java/com/test/prootapk/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/test/prootapk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
